<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="412dp"
        android:layout_height="72dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />











    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"

    />



    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="000-1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"

        />

    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"

        />




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_conta"
        android:layout_width="0dp"
        app:cardElevation="6dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_monetization_on_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/text_saldo_disponivel"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@id/iv_saldo"
                app:layout_constraintTop_toTopOf="@id/iv_saldo" />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_60_000_00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/iv_saldo"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel" />
            
            <TextView
                android:id="@+id/tv_saldoLimite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldoLimite"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"


                />
            <TextView
                android:id="@+id/tv_saldoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_65_000_00"
                app:layout_constraintTop_toTopOf="@id/tv_saldoLimite"
                app:layout_constraintStart_toEndOf="@id/tv_saldoLimite"
                android:layout_marginLeft="10dp"
                />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_saldoLimite"
                android:layout_margin="16dp"
                />
            <TextView
                android:id="@+id/ver_extrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ver_extrado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/redSecundary"
                android:layout_marginTop="12dp"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pagar"
        android:layout_width="112dp"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_conta"
        android:layout_margin="16dp"

        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardsevery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_tranferir"
        android:layout_width="112dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@id/card_conta"
        app:layout_constraintStart_toEndOf="@id/card_pagar"
        android:layout_margin="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardsevery2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_transferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
    android:id="@+id/card_recarregar"
    android:layout_width="112dp"
    android:layout_height="110dp"
    app:layout_constraintTop_toBottomOf="@id/card_conta"
    app:layout_constraintStart_toEndOf="@id/card_tranferir"
    android:layout_margin="16dp"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardsevery3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

        <ImageView
            android:id="@+id/iv_recarregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_system_security_update_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_recarregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_recarregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_recarregar"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_recarregar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cartaoFinal"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@color/redSecundary"
        app:layout_constraintTop_toBottomOf="@id/card_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:id="@+id/tv_cartaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cart_o_final"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartaoFinal"
        app:layout_constraintLeft_toLeftOf="@id/iv_cartaoFinal"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartaoFinal"



        />
    <TextView
        android:id="@+id/tv_cartaoFinalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_final"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_cartaoFinal"
        app:layout_constraintTop_toTopOf="@id/tv_cartaoFinal"


        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_expand_more_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartaoFinal"
        app:layout_constraintTop_toTopOf="@id/iv_cartaoFinal"
        app:layout_constraintEnd_toEndOf="@id/iv_cartaoFinal"



        />
    <ImageView

        android:contentDescription="@string/logo"
        android:id="@+id/logo_santander"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_banco_santander_seeklogo_com"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

